--- a/formgram-include.tex
+++ b/formgram-include.tex
@@ -117,7 +117,10 @@ St.Mueller@hu-berlin.de}
 \include{organisatorisches-formgram}
 \exewidth{(35)}
 \include{formgram-introduction}
-% \include{formgram-xbar}
+
+\include{formgram-psg}
+
+%\include{formgram-xbar}
 % \exewidth{(145)}
 % \include{formgram-gb}
 % \include{formgram-gpsg}
