--- a/formgram-include.tex
+++ b/formgram-include.tex
@@ -120,7 +120,7 @@ St.Mueller@hu-berlin.de}
 
 \include{formgram-psg}
 
-%\include{formgram-xbar}
+\include{formgram-xbar}
 % \exewidth{(145)}
 % \include{formgram-gb}
 % \include{formgram-gpsg}
