--- a/formgram-include.tex
+++ b/formgram-include.tex
@@ -27,17 +27,17 @@
 
 \huberlinlogon{0.89cm}
 
-\usepackage{jambox}
+%\usepackage{jambox}
 
 
-\usepackage{dgmacros,pst-tree,trees,dalrymple} % Mary Dalrymples macros
+%\usepackage{dgmacros,pst-tree,trees,dalrymple} % Mary Dalrymples macros
 
 \usepackage{my-ccg-ohne-colortbl}
 
 
 %\usepackage{epsfig}
 \usepackage{tabularx}
-\usepackage{ogonek}        % For Ewa Dabrowska
+%\usepackage{ogonek}        % For Ewa Dabrowska
 
 
 \usepackage{soul}
@@ -120,7 +120,7 @@ St.Mueller@hu-berlin.de}
 
 \include{formgram-psg}
 
-\include{formgram-xbar}
+%\include{formgram-xbar}
 % \exewidth{(145)}
 % \include{formgram-gb}
 % \include{formgram-gpsg}
