--- a/formgram-introduction.tex
+++ b/formgram-introduction.tex
@@ -1085,7 +1085,7 @@ Prepositional phrases (not all of them):
       \citep*{JLT75a-u,Joshi87a-u,KJ85a}
 \item Generalized Phrase Structure Grammar (GPSG)\\\citep*{GKPS85a,Uszkoreit87a}
 \item Lexical Functional Grammar (LFG)\\\citep{Bresnan82a-ed,Bresnan2001a,BF96a-ed,Berman2003a}
-\item Head-Driven Phrase Structure Grammar (HPSG)\\\citep{ps,ps2,Mueller99a,Mueller2002b,MuellerLehrbuch3}
+\item Head-Driven Phrase Structure Grammar (HPSG)\\\citep{ps,ps2,Mueller99a,Mueller2002b,MuellerLehrbuch}
 \item Construction Grammar (CxG)\\\citep*{FKoC88a,Goldberg95a,Goldberg2006a,FS2006a-ed}
 
 \bigskip
