--- a/formgram-psg.tex
+++ b/formgram-psg.tex
@@ -596,9 +596,9 @@ S  & $\to$ & NP(\blau<1>{Per1},\blau<1>{Num1},\blau<3>{nom})\\
 %% }
 
 
-\section{Home work}
+\subsection{Home work}
 
-\frame[shrink=5]{
+\frame[shrink=15]{
 \frametitle{Home work}
 
 \begin{enumerate}
