--- a/check-fromgram.tex
+++ b/check-fromgram.tex
@@ -46,8 +46,8 @@
 \includecomment{handout}
 \excludecomment{backup}
 
-\includeonly{formgram-psg}
-%\includeonly{formgram-xbar}
+%\includeonly{formgram-psg}
+\includeonly{formgram-xbar}
 %\includeonly{formgram-psg,formgram-xbar}
 %\includeonly{formgram-xbar}
 %\includeonly{formgram-gb}
