--- a/formgram-xbar.tex
+++ b/formgram-xbar.tex
@@ -713,7 +713,7 @@ XP $\to$ \xbar
 
 
 \frame{
-\frametitle{\xbar theory: Assumptions (II)}
+\frametitle{\xbar Theory: Assumptions}
 
 Phrases have at least three levels:
 \begin{itemize}
@@ -766,7 +766,7 @@ $\to$ X$'$ with adjunct daughter may be missing.
 }
 
 \frame{
-\frametitle{\xbar theory: Rules following \citew{Jackendoff77a}}\nocite{KP90a}\nocite{Pullum85a}
+\frametitle{\xbar Theory: Rules following \citew{Jackendoff77a}}\nocite{KP90a}\nocite{Pullum85a}
 
 
 
