--- a/organisatorisches-formgram.tex
+++ b/organisatorisches-formgram.tex
@@ -14,7 +14,7 @@ A bit outdated: Müller, Stefan (\citeyear{MuellerGTBuch})
 
 \input organisatorisches.tex
 
-\section{Leistungen}
+\subsection{Leistungen}
 \frame{
 \frametitle{Leistungen}
 
@@ -39,7 +39,7 @@ Für die Veranstaltung gibt es 4 Leistungspunkte.
 
 }
 
-\section{Recapitulation}
+\subsection{Recapitulation}
 \frame{
 \frametitle{Recapitulation}
 
