various changes and addition of first part of GB lecture

--- a/formgram-include.tex
+++ b/formgram-include.tex
@@ -1,3 +1,4 @@
+%% -*- coding:utf-8 -*-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%   $RCSfile: hpsg-include.tex,v $
 %%  $Revision: 1.3 $
@@ -40,7 +41,7 @@
 %\usepackage{ogonek}        % For Ewa Dabrowska
 
 
-\usepackage{soul}
+%\usepackage{soul}
 
 
 %\nodemargin5pt%\treelinewidth2pt\arrowwidth6pt\arrowlength10pt
@@ -50,11 +51,11 @@
 
 %\beamertemplateemptyfootbar
 
-%\hypersetup{pdfauthor={Stefan Müller (unter Benutzung von Material von Peter Gallmann, FSU Jena)}}
-%\hypersetup{pdftitle={Head-Driven Phrase Structure Grammar für das Deutsche}}
+%\hypersetup{pdfauthor={Stefan MÃ¼ller (unter Benutzung von Material von Peter Gallmann, FSU Jena)}}
+%\hypersetup{pdftitle={Head-Driven Phrase Structure Grammar fÃ¼r das Deutsche}}
 
 
-%\subject{Generative Grammatik für das Deutsche}
+%\subject{Generative Grammatik fÃ¼r das Deutsche}
 
 
 %\beamerdefaultoverlayspecification{<+->}
@@ -69,11 +70,6 @@
   Sprach- und literaturwissenschaftliche Fakult{\"a}t\\
   HU Berlin\\[2mm]
 St.Mueller@hu-berlin.de}
-
-%\includeonly{formgram-cg}
-%\includeonly{formgram-cxg-phrasal}
-%\includeonly{formgram-cxg}
-%\includeonly{formgram-psycho}
 
 
 \begin{document}
@@ -96,7 +92,8 @@ St.Mueller@hu-berlin.de}
 
 \include{formgram-xbar}
 % \exewidth{(145)}
-% \include{formgram-gb}
+\include{formgram-gb}
+%\include{formgram-gb2}
 % \include{formgram-gpsg}
 % \include{hpsg-formalismus}
 % \include{formgram-lfg}
@@ -114,7 +111,7 @@ St.Mueller@hu-berlin.de}
 
 
 \appendix
-% muß immer geladen werden, wegen Referenzen
+% muÃŸ immer geladen werden, wegen Referenzen
 \input{hu-literatur-biber}
 
 
