--- a/formgram-introduction.tex
+++ b/formgram-introduction.tex
@@ -5,18 +5,28 @@
 %\if 0
 
 
-\subtitle{Introduction: Why syntax and basic terms}
+\subtitle{Motivation of (formal) syntax and basic terminology}
+
+\section{Motivation of (formal) syntax and basic terminology}
+
 
 \huberlintitlepage[22pt]
 
 
 \frame{
-\frametitlefit{Motivation of formal syntax and basic terms}
+\frametitlefit{Reading material}
 
 \begin{itemize}
 \item Literature: English version of the grammatical theory textbook: \citew{MuellerGT-Eng}
+\pause
 \item There is also a German and a Chinese version.\\
       The fourth edition of the English book is the most recent one.
+\pause
+\item For this session, please read \citew[Chapter~1]{MuellerGT-Eng}.
+
+Topological fields are covered in Section~1.8. They are not part of the slides of this session but
+will be needed later on (chapter~3 and onwards).
+
 \end{itemize}
 
 \vspace{1cm}
@@ -27,7 +37,7 @@
 }
 
 
-\section{Goals of this course}
+\subsection{Goals of this course}
 
 
 
@@ -65,7 +75,6 @@ died before 650 AD, from \emph{Vakyapadiya}, found by Gabriele Knoll)
 }
 
 
-\section{Introduction}
 
 
 
