--- a/formgram-xbar.tex
+++ b/formgram-xbar.tex
@@ -1,4 +1,19 @@
-\subsection{\xbar syntax}
+%% -*- coding:utf-8 -*-
+
+\subsection{\xbar Theory}
+
+\subtitle{\xbar Theory}
+
+\huberlintitlepage[22pt]
+
+\frame{
+\frametitle{Reading material}
+
+Please read \citew[Section~2.5]{MuellerGT-Eng}.
+
+
+}
+
 
 \subsubsection{Nominal phrases}
 \label{sec-psg-np}
@@ -172,8 +187,8 @@ sm edges
 
 
 \begin{itemize}
-\item Bisher besteht \nbar nur aus einem Nomen,\\
-      aber einige Nomina erlauben neben Adjunkten auch Argumente:
+\item Until now, \nbar consists of a single noun only,\\
+      but some nouns allow arguments in addition to adjuncts.
 \eal
 \ex 
 \gll der Vater von Peter\\
@@ -558,22 +573,21 @@ PP $\to$ P NP
 
 \vfill
 \hfill
-\hfill
 \begin{forest}
 sm edges
 [PP
   [\pbar
-    [P [vor] ]
-    [NP [dem Abgrund,roof] ] ] ]
+    [P [vor;before] ]
+    [NP [dem Abgrund;the abyss, roof] ] ] ]
 \end{forest}
 \hfill
 \begin{forest}
 sm edges
 [PP
-  [AP [kurz,roof] ]
+  [AP [kurz;shortly,roof] ]
   [\pbar
-    [P [vor] ]
-    [NP [dem Abgrund,roof] ] ] ]
+    [P [vor;before] ]
+    [NP [dem Abgrund;the abyss,roof] ] ] ]
 \end{forest}
 \hfill
 \mbox{}
@@ -583,7 +597,7 @@ sm edges
 
 
 
-\subsubsection{\xbar Theory}
+\subsubsection{\xbar rules}
 \label{sec-xbar}
 
 \frame{
@@ -611,12 +625,15 @@ sm edges
 \frame{
 \frametitle{English adjective phrases}
 
-\eal
-\ex Kim and Sandy are proud.
-\ex Kim and Sandy are very proud.
-\ex Kim and Sandy are proud of their child.
-\ex Kim and Sandy are very proud of their child.
-\zl
+\begin{exe}
+\ex Kim and Sandy are
+\begin{xlist}
+\ex proud.
+\ex very proud.
+\ex proud of their child.
+\ex very proud of their child.
+\end{xlist}
+\end{exe}
 
 \pause
 
@@ -628,7 +645,7 @@ sm edges
 \zl
 
 \pause
-(Does not work for German \citep[Section~13.1.2]{MuellerGT-Eng}.)
+(\citet[Section~13.1.2]{MuellerGT-Eng}: Does not work for German.)
 
 }
 
