--- a/styles/unified-biblatex.sty
+++ b/styles/unified-biblatex.sty
@@ -17,6 +17,7 @@
 	useprefix = true, %sort von, van, de where they should appear
 	%refsection=chapter,
 	maxbibnames=99,
+	mincrossrefs=99,
 	maxcitenames=2,
         uniquename=false,
 	isbn=false,
