--- a/check-fromgram.tex
+++ b/check-fromgram.tex
@@ -32,6 +32,19 @@
 
 \usepackage{hu-beamer-includes-pdflatex,beamer-movement}
 
+\setcounter{tocdepth}{1}
+
+\renewcommand{\outline}[1]{%
+%\beamertemplateemptyfootbar%
+\huberlinjustbarfootline
+\frame{
+\frametitle{\outlineheading}#1}%
+%\beamertemplatecopyrightfootframenumber%
+\huberlinnormalfootline 
+\huberlinpagedec
+}
+
+
 \usepackage{pstricks}
 
 %\logo{\includegraphics[height=1cm]{fu_dgm_logo}}
@@ -47,10 +60,10 @@
 \excludecomment{backup}
 
 %\includeonly{formgram-psg}
-\includeonly{formgram-xbar}
+%\includeonly{formgram-xbar}
 %\includeonly{formgram-psg,formgram-xbar}
 %\includeonly{formgram-xbar}
-%\includeonly{formgram-gb}
+\includeonly{formgram-gb}
 
 
 \input formgram-include.tex
