--- a/check-formgram.tex
+++ b/check-formgram.tex
@@ -63,7 +63,9 @@
 %\includeonly{formgram-xbar}
 %\includeonly{formgram-psg,formgram-xbar}
 %\includeonly{formgram-xbar}
-\includeonly{formgram-gb}
+%\includeonly{formgram-gb}
+%\includeonly{formgram-gb2}
+\includeonly{formgram-gb3}
 
 
 \input formgram-include.tex
